[package]
name = "simple-json2"
version = "0.1.1"
authors = ["Bryan Chen<xlchen1291@gmail.com>", "Jimmy Chu<jimmychu0807@gmail.com>"]
description = "Simple JSON parser. Wasm / no_std ready."
edition = "2018"
repository = "https://github.com/jimmychu0807/simple-json2"
categories = [
	"no-std",
]

[dependencies]
paste = "0.1"
num-traits = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = []
