[package]
name = "simple-json2"
version = "0.1.2"
authors = ["Bryan Chen<xlchen1291@gmail.com>", "Jimmy Chu<jimmychu0807@gmail.com>"]
description = "Simple JSON parser. Wasm / no_std ready."
edition = "2018"
repository = "https://github.com/jimmychu0807/simple-json2"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = [
	"no-std",
]

[dependencies]
paste = "0.1.10"
num-traits = { version = "0.2.11", default-features = false }

[features]
default = ["std"]
std = []
